# bsuir_lexer

./: .gitmodules  CMakeLists.txt  input.data
src/: example.cpp  main.cpp
